--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "font-awesome": "^4.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1",
-    "react-table": "^7.0.0-rc.15"
+    "react-scripts": "3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
